--- a/HTML/form.html
+++ b/HTML/form.html
@@ -19,8 +19,7 @@
        </select> <br/>
        <p><label>Message</label></p>
        <textarea rows="4" cols="50"></textarea> <br/>
-       <button>submit comment</button>
+       <input type="submit" value="submitcomment"/>
        
-
     </form>
 </html>
